# auroral

./: LICENSE  README.md  animation.py  auroral.py  basic_requirements.txt  example.py  graph.py  play.py  pyproject.toml  readme.rst  requirements.txt  rl_requirements.txt  test.py  train.py
assets/: matches.json  test_configuration.json
assets/levels/: 1.json  10.json  11.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  isometric_test.json  readme.md  test.json
assets/levels/test/: isometric.json
assets/themes/1/: parameters.json
assets/themes/2/: parameters.json
assets/themes/a/: parameters.json
auroral/: __init__.py  environment.py  game.py  models.py  render.py  renderer.py  text.txt
auroral/game1/: environment.py  game.py  render.py
auroral/game2/: environment.py  game.py  render.py
models/: dqn.py  random.py  readme.md
models/random/: __init__.py
trained_models/dqn1/: configuration.json  evaluations.json
trained_models/dqn2/: configuration.json  evaluations-1.json  evaluations.json
training/: dqn-1.json  dqn-2.json  readme.rst  test.json
